Home Page Added

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Sportlect</title>
 </head>
 
 <body>
     <%- include("../partials/header.ejs") %>
         <%- body %>
-            <%-include(".. /partials/footer.ejs") %>
+            <%-include("../partials/footer.ejs") %>
 </body>
 
 </html>
