--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -12,6 +12,7 @@
     <%- include("../partials/header.ejs") %>
         <%- body %>
             <%-include("../partials/footer.ejs") %>
+            <script src="/script/news_script.js"></script>
 </body>
 
 </html>
