--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,6 @@
             <li><a href="#">Merchandise</a></li>
             <li><a href="#">clubs</a></li>
         </ul>
-        <button>Login</button>
+        <button><a href="#home-roles">Login</a></button>
     </div>
 </header>
