--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,6 +80,12 @@
                     <li>Comment on news articles</li>
                     <li>Access live scores and stats</li>
                 </ul>
+                <form action="" method="">
+                    <button>login</button>
+                </form>
+                <form action="" method="">
+                    <button>Register</button>
+                </form>
             </div>
             <div class="home-role-card">
                 <h3>🏟️ Sports Club</h3>
@@ -90,6 +96,12 @@
                     <li>Upload and manage merchandise</li>
                     <li>Build fan following</li>
                 </ul>
+                 <form action="" method="">
+                    <button>login</button>
+                </form>
+                <form action="" method="">
+                    <button>Register</button>
+                </form>
             </div>
             <div class="home-role-card">
                 <h3>🏆 League Organizer</h3>
@@ -100,6 +112,12 @@
                     <li>Input and track match results</li>
                     <li>Maintain dynamic points tables</li>
                 </ul>
+                 <form action="" method="">
+                    <button>login</button>
+                </form>
+                <form action="" method="">
+                    <button>Register</button>
+                </form>
             </div>
         </div>
     </section>
