--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,8 +2,8 @@
         <div class="footer-content">
             <div class="footer-left">
                 <div class="footer-logo">
-                    <img src="https://images.unsplash.com/photo-1544717297-fa95b6ee9643?w=80&h=80&fit=crop&crop=center" alt="Sportlect Logo">
-                    <span>Sportlect</span>
+                    <img src="/images/Crossfit.jpg" alt="Sportlect Logo">
+                    <span>Crossfit</span>
                 </div>
             </div>
             <div class="footer-center">
