--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <header>
     <div class="logo-container">
-        <img src="https://images.unsplash.com/photo-1544717297-fa95b6ee9643?w=80&h=80&fit=crop&crop=center"
+        <img src="/images/Crossfit.jpg"
             alt="logo-image">
-        <a href="">Sportlect</a>
+        <a href="">Crossfit</a>
     </div>
     <div class="links">
         <ul>
