--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <div class="logo-container">
         <img src="https://images.unsplash.com/photo-1544717297-fa95b6ee9643?w=80&h=80&fit=crop&crop=center"
             alt="logo-image">
-        <a href="">Sportlect</a>
+        <a href="/">Sportlect</a>
     </div>
     <div class="links">
         <ul>
@@ -11,6 +11,6 @@
             <li><a href="#">Merchandise</a></li>
             <li><a href="#">clubs</a></li>
         </ul>
-        <button>Login</button>
+        <a href="/login" class="login-button">Login</a>
     </div>
 </header>
