Some issues fixed

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,10 +7,10 @@
     </div>
     <div class="links">
         <ul>
-            <li><a href="#">Live-Score</a></li>
-            <li><a href="#">Tournament</a></li>
-            <li><a href="#">Merchandise</a></li>
-            <li><a href="#">clubs</a></li>
+            <li><a href="/live_scores">Live-Score</a></li>
+            <li><a href="/leagues">Leagues</a></li>
+            <li><a href="/merchandise">Merchandise</a></li>
+            <li><a href="/clubs">clubs</a></li>
         </ul>
         <button><a href="#home-roles">Login</a></button>
     </div>
