--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/style.css">
-    <title><%= title || 'Sporttellect' %></title>
-    <%- style || '' %>
+    <title>Crossfit</title>
 </head>
 <body>
     <%- include('../partials/header') %>
@@ -13,7 +12,6 @@
         <%- body %>
     </section>
     <%- include('../partials/footer') %>
-    <%- script || '' %>
     <script src="/script/news_script.js"></script>
 </body>
 </html>
