--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,14 +89,21 @@
                 <li>Comment on news articles</li>
                 <li>Access live scores and stats</li>
             </ul>
-            <div class="home-role-buttons">
-                <form action="" method="">
-                    <button class="home-role-btn home-role-login-btn">Login</button>
-                </form>
-                <form action="" method="">
-                    <button class="home-role-btn home-role-register-btn">Register</button>
-                </form>
-            </div>
+            <% let user = "none" %>
+             <div class="home-role-buttons">
+                     <% if(user==="none" ){ %>
+                    <form action="" method="">
+                        <button class="home-role-btn home-role-login-btn">Login</button>
+                    </form>
+                    <form action="" method="">
+                        <button class="home-role-btn home-role-register-btn">Register</button>
+                    </form>
+                    <%}else if(user.user_type=="viewer"){%>
+                        <form action="" method="">
+                            <button class="home-role-btn home-role-logout-btn">Log Out</button>
+                        </form>
+                        <%} %>
+                </div>
         </div>
         <div class="home-role-card">
             <h3>🏟️ Sports Club</h3>
@@ -107,14 +114,20 @@
                 <li>Upload and manage merchandise</li>
                 <li>Build fan following</li>
             </ul>
-            <div class="home-role-buttons">
-                <form action="" method="">
-                    <button class="home-role-btn home-role-login-btn">Login</button>
-                </form>
-                <form action="" method="">
-                    <button class="home-role-btn home-role-register-btn">Register</button>
-                </form>
-            </div>
+              <div class="home-role-buttons">
+                     <% if(user==="none" ){ %>
+                    <form action="" method="">
+                        <button class="home-role-btn home-role-login-btn">Login</button>
+                    </form>
+                    <form action="" method="">
+                        <button class="home-role-btn home-role-register-btn">Register</button>
+                    </form>
+                     <%}else if(user.user_type=="club"){%>
+                        <form action="" method="">
+                            <button class="home-role-btn home-role-logout-btn">Log Out</button>
+                        </form>
+                        <%} %>
+                </div>
         </div>
         <div class="home-role-card">
             <h3>🏆 League Organizer</h3>
@@ -125,14 +138,21 @@
                 <li>Input and track match results</li>
                 <li>Maintain dynamic points tables</li>
             </ul>
-            <div class="home-role-buttons">
-                <form action="" method="">
-                    <button class="home-role-btn home-role-login-btn">Login</button>
-                </form>
-                <form action="" method="">
-                    <button class="home-role-btn home-role-register-btn">Register</button>
-                </form>
-            </div>
+           
+                <div class="home-role-buttons">
+                     <% if(user==="none" ){ %>
+                    <form action="" method="">
+                        <button class="home-role-btn home-role-login-btn">Login</button>
+                    </form>
+                    <form action="" method="">
+                        <button class="home-role-btn home-role-register-btn">Register</button>
+                    </form>
+                    <%}else if(user.user_type=="league"){%>
+                        <form action="" method="">
+                            <button class="home-role-btn home-role-logout-btn">Log Out</button>
+                        </form>
+                        <%} %>
+                </div>
         </div>
     </div>
 </section>
