--- a/views/club_enlistpage.ejs
+++ b/views/club_enlistpage.ejs
@@ -7,6 +7,7 @@
     <div class="club-enlistpage-search-container">
         <input type="text" class="club-enlistpage-searchbar" id="club-enlistpage-searchbar"
             placeholder="Search clubs by name">
+        <button class="btn">🕵</button>
     </div>
 
     <div class="club-enlistpage-filter-buttons">
