--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -6,6 +6,7 @@
     <link rel="icon" href="/images/Crossfit.jpg">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/club_enlistpage.css">
+    <link rel="stylesheet" href="/styles/news.css">
     <title>Crossfit</title>
 </head>
 <body>
@@ -14,6 +15,5 @@
         <%- body %>
     </section>
     <%- include('../partials/footer') %>
-    <script src="/script/news_script.js"></script>
 </body>
 </html>
