--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
     </div>
     <div class="links">
         <ul>
+            <li><a href="/news">News</a></li>
             <li><a href="/live_scores">Live-Score</a></li>
             <li><a href="/leagues">Leagues</a></li>
             <li><a href="/merchandise">Merchandise</a></li>
