--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,9 +16,9 @@
 
         <% let user = "none" %>
         <% if(user === "none"){ %>
-        <button><a href="#home-roles">Login</a></button>
+        <button><a href="/#home-roles">Login</a></button>
         <% }else{ %>
-             <button><a href="#home-roles"><%  %></a></button>
+             <button><a href="/#home-roles"><%  %></a></button>
             <% } %>
     </div>
 </header>
