--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/club_enlistpage.css">
     <link rel="stylesheet" href="/styles/news.css">
+    <link rel="stylesheet" href="/styles/register_viewers.css">
+    <link rel="stylesheet" href="/styles/register_clubs.css">
+    <link rel="stylesheet" href="/styles/register_leagues.css">
+    <link rel="stylesheet" href="/styles/login_viewers.css">
+    <link rel="stylesheet" href="/styles/login_clubs.css">
+    <link rel="stylesheet" href="/styles/login_leagues.css">
     <title>Crossfit</title>
 </head>
 <body>
