swapping btw register and login

--- a/views/login_leagues.ejs
+++ b/views/login_leagues.ejs
@@ -14,6 +14,7 @@
                     <label for="login-leagues-password" class="login-leagues-label">League Password:</label>
                     <input type="password" id="login-leagues-password" class="login-leagues-input" name="league_password" required>
                 </div>
+                <p>Not Register? <a href="/register/register_leagues"  style="color: aqua;">register</a></p>
 
                 <button type="submit" class="login-leagues-submit-btn">Log In</button>
             </form>
