--- a/views/login_viewers.ejs
+++ b/views/login_viewers.ejs
@@ -14,6 +14,7 @@
                     <label for="login-viewer-password" class="login-viewer-label">Password:</label>
                     <input type="password" id="login-viewer-password" class="login-viewer-input" name="user_password" required>
                 </div>
+                <p>Not Register? <a href="/register/register_viewers"  style="color: aqua;">register</a></p>
 
                 <button type="submit" class="login-viewer-submit-btn">Log In</button>
             </form>
