--- a/views/login_clubs.ejs
+++ b/views/login_clubs.ejs
@@ -14,6 +14,7 @@
                     <label for="login-clubs-password" class="login-clubs-label">Club Password:</label>
                     <input type="password" id="login-clubs-password" class="login-clubs-input" name="club_password" required>
                 </div>
+                <p>Not Register? <a href="/register/register_clubs"  style="color: aqua;">register</a></p>
 
                 <button type="submit" class="login-clubs-submit-btn">Log In</button>
             </form>
