--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -21,5 +21,6 @@
         <%- body %>
     </section>
     <%- include('../partials/footer') %>
+    <script src="/script/script.js"></script>
 </body>
 </html>
