--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,24 +1,59 @@
-<header>
-    <div class="logo-container">
-        <img src="/images/Crossfit.jpg"
-            alt="logo-image">
-        <a href="/">Crossfit</a>
-  
-    </div>
-    <div class="links">
-        <ul>
-            <li><a href="/news">News</a></li>
-            <li><a href="/live_scores">Live-Score</a></li>
-            <li><a href="/leagues">Leagues</a></li>
-            <li><a href="/merchandise">Merchandise</a></li>
-            <li><a href="/clubs">clubs</a></li>
-        </ul>
+<header class="header-main-header">
+    <nav class="header-desktop-nav">
+        <div class="header-logo-container">
+            <img src="/images/Crossfit.jpg" alt="Crossfit Logo" class="header-logo-image">
+            <a href="/" class="header-logo-text">Crossfit</a>
+        </div>
 
-        <% let user = "none" %>
-        <% if(user === "none"){ %>
-        <button><a href="/#home-roles">Login</a></button>
-        <% }else{ %>
-             <button><a href="/#home-roles"><%  %></a></button>
-            <% } %>
-    </div>
+        <div class="header-links">
+            <ul class="header-nav-list">
+                <li class="header-nav-item"><a href="/live_scores" class="header-nav-link">Live-Score</a></li>
+                <li class="header-nav-item"><a href="/leagues" class="header-nav-link">Leagues</a></li>
+                <li class="header-nav-item"><a href="/merchandise" class="header-nav-link">Merchandise</a></li>
+                <li class="header-nav-item"><a href="/clubs" class="header-nav-link">Clubs</a></li>
+                <li class="header-nav-item"><a href="/news" class="header-nav-link">News</a></li>
+            </ul>
+            <div class="header-user-menu" id="header-desktop-user-menu">
+                <img src="/images/ball.jpg" alt="User Avatar" class="header-user-avatar">
+                <div class="header-dropdown header-hidden" id="header-desktop-dropdown">
+
+                    <a href="" class="header-dropdown-item header-logout">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <nav class="header-mobile-nav">
+        <div class="header-logo-container">
+            <img src="/images/Crossfit.jpg" alt="Crossfit Logo" class="header-logo-image">
+            <a href="#" class="header-logo-text">Crossfit</a>
+        </div>
+        <div class="header-links">
+            <div class="header-user-menu" id="header-mobile-user-menu">
+                <img src="/images/ball.jpg" alt="User Avatar" class="header-user-avatar">
+                <div class="header-dropdown header-hidden" id="header-mobile-dropdown">
+
+                    <a href="" class="header-dropdown-item header-logout">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </a>
+                </div>
+            </div>
+            <div class="header-mobile-menu">
+                <div class="header-hamburger" id="header-hamburger-btn">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <div class="header-mobile-dropdown header-hidden" id="header-mobile-links-dropdown">
+                    <ul class="header-nav-list">
+                        <li class="header-nav-item"><a href="/live_scores" class="header-nav-link">Live-Score</a></li>
+                        <li class="header-nav-item"><a href="/leagues" class="header-nav-link">Leagues</a></li>
+                        <li class="header-nav-item"><a href="/merchandise" class="header-nav-link">Merchandise</a></li>
+                        <li class="header-nav-item"><a href="/clubs" class="header-nav-link">Clubs</a></li>
+                        <li class="header-nav-item"><a href="/news" class="header-nav-link">News</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
 </header>
