--- a/views/register_viewers.ejs
+++ b/views/register_viewers.ejs
@@ -4,7 +4,7 @@
       <h2 class="register-viewers-form-title">Join Our Sports Community!</h2>
       <p class="register-viewers-form-subtitle">Register or log in to get exclusive updates and personalize your feed.</p>
 
-      <form class="register-viewers-form" id="register-viewers-registration-form">
+      <form class="register-viewers-form" id="register-viewers-registration-form" method="post" action="/register/register_viewers">
         <div class="register-viewers-form-group">
           <label for="register-viewers-name" class="register-viewers-label">Name:</label>
           <input type="text" id="register-viewers-name" class="register-viewers-input" name="name" required>
