--- a/views/register_leagues.ejs
+++ b/views/register_leagues.ejs
@@ -4,10 +4,10 @@
             <h2 class="register-leagues-form-title">Register Your Sports League!</h2>
             <p class="register-leagues-form-subtitle">Bring your league to a wider audience. Provide the details below to get started.</p>
 
-            <form class="register-leagues-form" id="register-leagues-registration-form">
+            <form class="register-leagues-form" id="register-leagues-registration-form" action="/register/register_leagues" method="post">
                 <div class="register-leagues-form-group">
                     <label for="register-leagues-name" class="register-leagues-label">League Name:</label>
-                    <input type="text" id="register-leagues-name" class="register-leagues-input" name="league_name" required>
+                    <input type="text" id="register-leagues-name" class="register-leagues-input" name="name" required>
                 </div>
 
                  <div class="register-leagues-form-group">
@@ -19,17 +19,17 @@
 
                 <div class="register-leagues-form-group">
                     <label for="register-leagues-email" class="register-leagues-label">League Email:</label>
-                    <input type="email" id="register-leagues-email" class="register-leagues-input" name="league_email" required>
+                    <input type="email" id="register-leagues-email" class="register-leagues-input" name="email" required>
                 </div>
 
                 <div class="register-leagues-form-group">
                     <label for="register-leagues-password" class="register-leagues-label">League Password:</label>
-                    <input type="password" id="register-leagues-password" class="register-leagues-input" name="league_password" required>
+                    <input type="password" id="register-leagues-password" class="register-leagues-input" name="password" required>
                 </div>
 
                 <div class="register-leagues-form-group">
                     <label for="register-leagues-bio" class="register-leagues-label">League Bio:</label>
-                    <textarea id="register-leagues-bio" class="register-leagues-textarea" name="league_bio" rows="5" placeholder="Describe your league's format, vision, and key features..." required></textarea>
+                    <textarea id="register-leagues-bio" class="register-leagues-textarea" name="bio" rows="5" placeholder="Describe your league's format, vision, and key features..." required></textarea>
                 </div>
 
                 <div class="register-leagues-form-group">
