--- a/views/register_clubs.ejs
+++ b/views/register_clubs.ejs
@@ -14,7 +14,10 @@
                 <div class="register-club-form-group">
                     <label for="register-club-sport" class="register-club-label">Sport:</label>
                     <select id="register-club-founder-register" class="register-club-input" name="sport" required>
-                        <option value="">--select--</option>
+                        <option>--select--</option>
+                        <option value="cricket">🏏 Cricket</option>
+                        <option value="football">⚽ Football</option>
+                        <option value="basketball">🏀 Basketball</option>
                     </select>
                 </div>
 
