minor bugs fixed

--- a/views/register_clubs.ejs
+++ b/views/register_clubs.ejs
@@ -5,7 +5,7 @@
             <p class="register-club-form-subtitle">Showcase your club to the world. Fill in the details below to get
                 started.</p>
 
-            <form class="register-club-form" id="register-club-registration-form" action="/register/register_clubs">
+            <form class="register-club-form" id="register-club-registration-form" action="/register/register_clubs" method="post">
                 <div class="register-club-form-group">
                     <label for="register-club-name" class="register-club-label">Club Name:</label>
                     <input type="text" id="register-club-name" class="register-club-input" name="name" required>
